# calculator

./: .gitignore  Animal.cpp  Animal.h  BearWidget.cpp  BearWidget.h  Blueberry.cpp  Blueberry.h  CMakeLists.txt  Calculator.cpp  Calculator.h  ClickableLabel.cpp  ClickableLabel.h  GameBoard.cpp  GameBoard.h  Housecat.cpp  Housecat.h  README.md  main.cpp  qt_test.pro
